--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
             <link href="styles.css" rel="stylesheet">
           </head>
         <link rel="stylesheet" type="text/css" href="styles.css">
+        <title>Eyes-A-Moving</title>
     </head>
     <body>
         <!-- Navigation Bar -->
